<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cabpool.ChooseActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/button2"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/loginasdriver" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:text="@string/loginaspass" />
    
        <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/govindpuri" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="260dp"
        android:layout_height="wrap_content"
        android:text="@string/np" />

</FrameLayout>

